Got title showing; added songs.

--- a/PictureToBurn.html
+++ b/PictureToBurn.html
@@ -1,4 +1,10 @@
-<?php require_once "head.php" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head><link href="songStyles.css" rel="stylesheet" type="text/css" /></head>
+
+<body>
 
 State the obvious, I didn't get my perfect fantasy<br />
 I realize you love yourself more than you could ever love me<br />
@@ -51,4 +57,4 @@ Burn, burn, burn, baby, burn<br />
 You're just another picture to burn<br />
 Baby, burn...
 
-<?php require_once "tail.php" ?>
+</body></html>
