--- a/TimMcGraw.html
+++ b/TimMcGraw.html
@@ -1,6 +1,10 @@
-<?php require_once "head.php" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
+<head><link href="songStyles.css" rel="stylesheet" type="text/css" /></head>
 
+<body>
 He said the way my blue eyes shined<br />
 Put those Georgia stars to shame that night<br />
 I said: "That's a lie."<br />
@@ -71,4 +75,4 @@ He said the way my blue eyes shine<br />
 Put those Georgia stars to shame that night<br />
 I said: "That's a lie"
 
-<?php require_once "tail.php" ?>
+</body></html>
